update codemiror dependencies. codemirror 5.65.19 instead of 5.65.16 z-index for img in vs-code to fix bug, editorTheme default set to 'drakula', new Editor.js bug 1 - set code - fixed

--- a/src/App.css
+++ b/src/App.css
@@ -319,4 +319,5 @@
   cursor: pointer;
   border: solid 1px rgb(139, 139, 139);
   border-radius: 8px;
+  z-index: 500;
 }
